--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -2,6 +2,8 @@
 <div class="row row-centered">
 <div class="col-xs-6 col-centered"><div class="item"><div class="content">
   {{message}}
+
+  {{guitars}}
 </div></div></div>
 <!-- <div class="col-xs-6 col-centered"><div class="item"><div class="content"></div></div></div>
 <div class="col-xs-3 col-centered"><div class="item"><div class="content"></div></div></div>
