--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -1,11 +1,21 @@
-<div class="container">
-<div class="row row-centered">
-<div class="col-xs-6 col-centered"><div class="item"><div class="content">
-  {{message}}
-</div></div></div>
-<!-- <div class="col-xs-6 col-centered"><div class="item"><div class="content"></div></div></div>
-<div class="col-xs-3 col-centered"><div class="item"><div class="content"></div></div></div>
-<div class="col-xs-3 col-centered"><div class="item"><div class="content"></div></div></div>
-<div class="col-xs-3 col-centered"><div class="item"><div class="content"></div></div></div> -->
+<div class="container topContainer">
+  <div class="row row-centered">
+    <div class="col-md-3 col-centered"><div class="item"><div class="content">
+      <img class="homeImage" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAMcAAAAJGM2NThhMGI1LTdlYTItNDkwNy1iZjUyLWQ3NzI2MTVmZDNhMw.jpg" alt="">
+    </div></div></div>
+    <div class="col-xs-6 col-centered"><div class="item"><div class="content">
+      <p>Hi</p>
+    </div></div></div>
+    <!--   <div class="col-xs-3 col-centered"><div class="item"><div class="content">
+    <p>Hi</p>
+  </div></div></div> -->
 </div>
+</div>
+<div class="container">
+  <div class="row row-centered">
+    <div class="col-md-3 col-centered"><div class="item"><div class="content">
+      <p>Bottom</p>
+    </div></div></div>
+
+  </div>
 </div>
