--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,17 +27,22 @@ body{
 .navbar a{
   color: white !important;
 }
-.navbar a:hover{
+/* .navbar a:hover{
   color: rgb(81,101,140) !important;
-}
+} */
 
 .homeImage{
-  height: 23vw;
-  width: 100%;
+  height: 25vw;
+  width: 25%;
+/*   border-radius: 50%; */
 }
 
 .topContainer{
   margin-top: 20px;
+}
+
+.galvanizeLink{
+  color: orange !important;
 }
 
 /* .page.ng-enter,
