--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -29,7 +29,7 @@
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
         <p>Full stack web developer educated through the
-          <a class="galvanizeLink" href="http://www.galvanize.com/courses/full-stack/" target="_blank">
+          <a class="galvanizeLink" href="https://www.galvanize.com/courses/full-stack/" target="_blank">
             Galvanize Full Stack</a> web development program. <br>
 
             <h1 class="skillsH1">Skills</h1>
