--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -180,7 +180,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-lg-offset-2">
+      <div class="col-lg-12">
         <img src="/images/AkyunaAkishResumeJPG.jpg" alt="">
       </div>
     </div>
